java 8 compliant use of Paths